# tg_aggregator

./: FRONTEND_PLAN.md  PHASE_1_COMPLETE.md  README  README.md
backend/: .gitignore  README.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml  readme.md  session.session
backend/app/: main.py
backend/app/api/: __init__.py  health.py
backend/app/api/v1/: __init__.py  admin.py  bookmarks.py  channels.py  feeds.py  posts.py  scrape.py  search.py  tags.py
backend/app/core/: channels.py  config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  bookmark.py  channel.py  feed.py  post.py  post_tag.py  tag.py
backend/app/schemas/: __init__.py  bookmark.py  channel.py  feed.py  post.py  tag.py
backend/app/services/: __init__.py  bookmark_service.py  channel_service.py  feed_service.py  mock_llm_tagger.py  post_service.py  scraper.py  scraper_base.py  scraper_orchestrator.py  tag_service.py
backend/migrations/: env.py
backend/migrations/versions/: 023fabacfafa_add_channel_model.py  42773210c5f2_initial_migration_phase_2_models.py  cb66fbbdc04f_initial_migration.py
backend/notebooks/: tg_web_scrapper.ipynb
backend/scripts/: scrape_all.py  scrape_channels.py  session.session
frontend/: .env  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/context/: FeedContext.tsx
frontend/src/hooks/: useBookmarks.ts  useChannels.ts  useFeeds.ts  useKeyboardShortcuts.ts  usePosts.ts  usePullToRefresh.ts  useSearch.ts  useTags.ts
frontend/src/services/: api.ts
(+23 files in other folders)
