[project]
name = "backend"
version = "0.1.0"
description = "Telegram channel aggregator for ML/DL content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "python-dotenv>=1.2.1",
    "telethon>=1.42.0",
    "sqlmodel>=0.0.16",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "uvicorn[standard]>=0.32.0",
    "python-json-logger>=3.2.0",
]

[dependency-groups]
notebooks = [
    "jupyterlab",
    "ipykernel",
    "matplotlib",
]
